--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="80dp">
     <ImageView
-        android:layout_marginTop="5dp"
         android:id="@+id/image"
         android:src="@mipmap/ic_launcher"
         android:layout_width="80dp"
@@ -19,36 +18,34 @@
         <ImageView
             android:layout_marginTop="10dp"
             android:layout_marginLeft="30dp"
-            android:src="@drawable/play"
-            android:id="@+id/play"
-            android:text="播放"
-            android:layout_width="40dp"
-            android:layout_height="40dp" />
-        <ImageView
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="40dp"
-            android:src="@drawable/pause"
+            android:src="@mipmap/pause"
             android:id="@+id/pause"
-            android:text="暂停"
             android:layout_width="40dp"
             android:layout_height="40dp" />
         <ImageView
             android:layout_marginTop="10dp"
             android:layout_marginLeft="40dp"
-            android:src="@drawable/stop"
+            android:src="@mipmap/play"
+            android:id="@+id/play"
+            android:layout_width="40dp"
+            android:layout_height="40dp" />
+        <ImageView
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="40dp"
+            android:src="@mipmap/stop"
             android:id="@+id/stop"
-            android:text="停止"
             android:layout_width="40dp"
             android:layout_height="40dp" />
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="60dp">
             <ImageView
-                android:layout_centerInParent="true"
                 android:id="@+id/dead"
-                android:src="@drawable/cha"
+                android:src="@mipmap/clear"
                 android:layout_width="35dp"
-                android:layout_height="35dp" />
+                android:layout_height="35dp"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true" />
         </RelativeLayout>
     </LinearLayout>
 </RelativeLayout>
